# grpc-streams

./: Cargo.toml  LICENSE  README.md  build.rs
proto/: grpc_streams.proto
src/: client.rs  consumer.rs  producer.rs  server.rs
