[package]
name = "grpc-streams"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
prost = "0.8"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

sled = "0.34"
lazy_static = "*"

[build-dependencies]
tonic-build = "0.5"

[[bin]]
name = "grpcstreams-server"
path = "src/server.rs"

[[bin]]
name = "grpcstreams-producer"
path = "src/producer.rs"

[[bin]]
name = "grpcstreams-consumer"
path = "src/consumer.rs"
